added CSS file to split utilities classes from the main stylesheet, added stats section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./utilities.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>Resposive Layout</title>
@@ -44,6 +45,26 @@
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
                 </form>
+            </div>
+        </div>
+    </section>
+    <!-- STATS -->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate nemo delectus ipsum quasi ut itaque ullam! Voluptatem aspernatur.</h3>
+            <div class="grid grid-3 text-center my4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>1,000</h3>
+                </div>
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>1,000</h3>
+                </div>
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>1,000</h3>
+                </div>
             </div>
         </div>
     </section>
